# pptx-planner

./: .gitignore  README.md  app.py  planner_prototyping.ipynb  pyproject.toml  test.py
asset/: amaris_presentation.pptx
asset/color scheme/: theme1.xml
asset/media/: hdphoto1.wdp  image57.emf  image58.emf
experimentation/: check_slide.py  duy_corpo_template.ipynb  flawed_html.py  full_pipeline_prototyping.ipynb  html_generation_prototyping.ipynb  html_to_image_prototyping.ipynb  html_to_pptxgenjs_translator.ipynb  package-lock.json  planner_prototyping.ipynb
experimentation/corpo_template/: duy_corpo_template.ipynb  template1_right.html  template2_mid.html  test_temp1.html  test_temp2.html
htmlrender/: renderer.py
llm/: gemini.py  llmwrapper.py  openai.py
pptx_generation/: generation.py  planner.py
utils/: utils.py
